--- a/tori.html
+++ b/tori.html
@@ -2,7 +2,6 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -18,7 +17,7 @@
             <div class="row">
                 <div>
                     <div class="kepdiv col-sm-6 col-lg-3">
-                        <a href="Luxemburgi zsigmond.html"> <img class="kiskepek" src="kepek/avengers.jpg" alt="Luxemburgi Zsigmond"></a>
+                        <a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="https://lh3.googleusercontent.com/proxy/BdzdqGmpKpCE3Dqp-KEQP30xgDOFU3vv-L9_Iyqxq-0TKbYNuMTRBKnMFsUTaTRrPByYqZPKIILDu5Uww4uPt4OsaHacNNM7rAnb-wpYNSILt7RuHTrkZtVerfY722gfm5nA-SB5Sxbg7AKTe1V53n9joy1N0v48ZVP-G-2LyfLxY4IGF76epFi3hxl8kYumHVh4OjJij4L2" alt="Luxemburgi Zsigmond"></a>
                     </div>
                 </div>
             </div>
