--- a/tori.html
+++ b/tori.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div>
                     <div class="kepdiv col-sm-6 col-lg-3">
-                        <a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="https://lh3.googleusercontent.com/proxy/BdzdqGmpKpCE3Dqp-KEQP30xgDOFU3vv-L9_Iyqxq-0TKbYNuMTRBKnMFsUTaTRrPByYqZPKIILDu5Uww4uPt4OsaHacNNM7rAnb-wpYNSILt7RuHTrkZtVerfY722gfm5nA-SB5Sxbg7AKTe1V53n9joy1N0v48ZVP-G-2LyfLxY4IGF76epFi3hxl8kYumHVh4OjJij4L2" alt="Luxemburgi Zsigmond"></a>
+                        <a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="luxemburgi.jpg" alt="Luxemburgi Zsigmond"></a>
                     </div>
                 </div>
             </div>
