--- a/tori.html
+++ b/tori.html
@@ -16,9 +16,14 @@
         <div class="section">
             <div class="row">
                 <div>
-                    <div class="kepdiv col-sm-6 col-lg-3">
-                        <a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="luxemburgi.jpg" alt="Luxemburgi Zsigmond"></a>
-                    </div>
+                    <div class="kepdiv col-sm-6 col-lg-3"><a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="luxemburgi.jpg" alt="Luxemburgi Zsigmond"></a></div>
+                    <div class="kepdiv col-sm-6 col-lg-3"><a href="luxi_torokharcok.html"><img class="kiskepek" src="luxi_harcok.jpg" alt="Luxemburgi Zsigmond Törökellenes Harcai"></a></div>
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <div class="kepdiv col-sm-6 col-lg-3"><a href="Hunyadi_János.html"><img class="kiskepek" src="hunyadijanos.jpg" alt="Hunyadi János"></a></div>
+                    <div class="kepdiv col-sm-6 col-lg-3"><a href="hunydi_torokharc.html"><img class="kiskepek" src="hunydi_torok.jpg" alt="Hunyadi János Törökellenes Harcai"></a></div>
                 </div>
             </div>
         </div>
