--- a/tori.html
+++ b/tori.html
@@ -16,7 +16,9 @@
         <div class="section">
             <div class="row">
                 <div>
-                    <div class="kepdiv col-sm-6 col-lg-3"><a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="luxemburgi.jpg" alt="Luxemburgi Zsigmond"></a></div>
+                    <div class="kepdiv col-sm-6 col-lg-3"><a href="Luxemburgi_zsigmond.html"><img class="kiskepek" src="luxemburgi.jpg" alt="Luxemburgi Zsigmond"></a>
+                    
+                    </div>
                     <div class="kepdiv col-sm-6 col-lg-3"><a href="luxi_torokharcok.html"><img class="kiskepek" src="luxi_harcok.jpg" alt="Luxemburgi Zsigmond Törökellenes Harcai"></a></div>
                 </div>
             </div>
