--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -10,9 +10,9 @@
     <title>Luxemburgi Zsigmond</title>
 </head>
 <body>
-    <div>
-        <div>
-            
+    <div class="container">
+        <div class="fej">
+            Luxemburgi Zsigmond
         </div>
     </div>
 </body>
