--- a/hunydi_torokharc.html
+++ b/hunydi_torokharc.html
@@ -7,28 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Luxemburgi Zsigmond</title>
+    <title>Hunyadi János Törökellenes Harcai</title>
 </head>
 <body>
     <div class="container">
-        <div class="fej">
-            Luxemburgi Zsigmond
+        <div class="fej2">
+            Hunyadi János</br>Törökellenes Harcai
         </div>
         <div>
             <table class="keret">
                 <tr>
-                    <th><h1 class="cim1">Élete</h1>
+                    <th><h1 class="cim1">Török harcok</h1>
                         <p class="szoveg1">
-                            Itt lesz az élete</p>
-                        <h1 class="cim1">Munkássága</h1>
+                            Itt lesznek a plusz dolgok</p>
+                        <h1 class="cim1">PLusz dolgok</h1>
                         <p class="szoveg1">
-                            Itt lesz a munkássága
+                            Itt lesznek a plusz dolgok
                         </p>
                     </th>
                 </tr>
             </table>
         </div>
-        <footer><p>Készítette: Pintea Dániel</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
+        <footer><p>Készítette: Kósik János</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
     </div>
 </body>
 </html>
