--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="fej1">
-            Hunyadi János
+            <p class="mainsz">Hunyadi János</p>
         </div>
         <div>
-            <table class="keret">
+            <table>
                 <tr>
                     <th><h1 class="cim1">Élete</h1>
                         <p class="szoveg1">
