--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="fej">
-            Luxemburgi Zsigmond
+            <p class="mainsz">Luxemburgi Zsigmond</p>
         </div>
         <div>
-            <table class="keret">
+            <table>
                 <tr>
                     <th><h1 class="cim1">Élete</h1>
                         <p class="szoveg1">
