--- a/hunydi_torokharc.html
+++ b/hunydi_torokharc.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="fej2">
-            Hunyadi János</br>Törökellenes Harcai
+            <p class="mainsz">Hunyadi János</br>Törökellenes Harcai</p>
         </div>
         <div>
-            <table class="keret">
+            <table>
                 <tr>
                     <th><h1 class="cim1">Török harcok</h1>
                         <p class="szoveg1">
