--- a/luxi_torokharcok.html
+++ b/luxi_torokharcok.html
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <div class="fej3">
-            Luxemburgi Zsigmond</br>Törökellenes Harcai
+            <p class="mainsz">Luxemburgi Zsigmond</br>Törökellenes Harcai</p>
         </div>
         <div>
             <div>
-                <table class="keret">
+                <table>
                     <tr>
                         <th><h1 class="cim1">Török harcok</h1>
                             <p class="szoveg1">
@@ -28,10 +28,9 @@
                         </th>
                     </tr>
                 </table>
-                </div>
-                
             </div>
-        <footer><p>Készítette: Pintea Dániel</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
         </div>
+        <footer><p>Készítette: Pintea Dániel</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
+    </div>
 </body>
 </html>
