--- a/tori.html
+++ b/tori.html
@@ -34,7 +34,11 @@
                         </p></div>
                     </div>
                     <div class="kepdiv col-sm-6 col-lg-3 center"><a href="hunydi_torokharc.html"><img class="kiskepek" src="hunydi_torok.jpg" alt="Hunyadi János Törökellenes Harcai"></a>
-                        <div class="szoveg"><p></p></div>
+                        <div class="szoveg"><p>
+                             - 1396-ban volt az első harca a törökellen Nikápolyná.</br>
+                             - 1456-ban volt az utolsó ütközete Nándorfehérvérnál.</br>
+                             [A további információkért katt a <a href="hunydi_torokharc.html">szövegre</a> vagy a képre]
+                        </p></div>
                     </div>
                 </div>
             </div>
