--- a/luxi_torokharcok.html
+++ b/luxi_torokharcok.html
@@ -30,7 +30,12 @@
                 </table>
             </div>
         </div>
-        <footer><p>Készítette: Pintea Dániel</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
-    </div>
+        <a href="tori.html"><button type="button" class="button">Vissza</button></a>
+     </div>
 </body>
+    <footer>
+        <div class="footeres">
+            <p>Készítette: Pintea Dániel</p>
+        </div>
+    </footer>
 </html>
