--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -28,7 +28,12 @@
                 </tr>
             </table>
         </div>
-        <footer><p>Készítette: Kósik János</p><a href="tori.html"><button type="button" class="button">Vissza</button></a></footer>
-    </div>
+        <a href="tori.html"><button type="button" class="button">Vissza</button></a>
+     </div>
 </body>
+    <footer>
+        <div class="footeres">
+            <p>Készítette: Pintea Dániel</p>
+        </div>
+    </footer>
 </html>
