--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -19,7 +21,8 @@
                 <tr>
                     <th><h1 class="cim1">Élete</h1>
                         <p class="szoveg1">
-                            Itt lesz az élete</p>
+                             - Luxemburgi Zsigmond, németül: Sigismund von Luxemburg (Prága, 1368. február 14. – Znaim, 1437. december 9.) magyar, német és cseh király, német-római császár, a 
+                            késő középkori Európa egyik legjelentősebb személyisége, a hercegi birtokáról elnevezett német eredetű Luxemburgi-ház tagja.</p>
                         <h1 class="cim1">Munkássága</h1>
                         <p class="szoveg1">
                             Itt lesz a munkássága
@@ -28,11 +31,11 @@
                 </tr>
             </table>
         </div>
-        <a href="tori.html"><button type="button" class="button">Vissza</button></a>
+        <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
-    <footer>
-        <div class="footeres">
+    <footer class="mellek">
+        <divs>
             <p>Készítette: Pintea Dániel</p>
         </div>
     </footer>
