--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -35,7 +35,7 @@
 </body>
     <footer class="mellek">
         <div>
-            <p>Készítette: Pintea Dániel</p>
+            <p>Készítette: <a href="https://www.facebook.com/janos.kosik.9277">Kósik János</a></p>
         </div>
     </footer>
 </html>
