--- a/luxi_torokharcok.html
+++ b/luxi_torokharcok.html
@@ -37,7 +37,7 @@
 </body>
     <footer class="mellek">
         <div>
-            <p>Készítette: Pintea Dániel</p>
+            <p>Készítette: <a href="https://www.facebook.com/pintea.danielpv">Pintea Dániel</a></p>
         </div>
     </footer>
 </html>
