--- a/tori.html
+++ b/tori.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="header">
-            Luxemburgi Zsigmond és Hunyadi János törökellenes harcai
+            Zsigmond és Hunyadi János törökellenes harcai
         </div>
         <div class="section">
             <div class="row">
@@ -46,9 +46,14 @@
             </div>
         </div>
         <footer class="alap">
-            <p>Készítette: Pintea Dániel és Kósik János</p>
+            <p>
+                Készítette: 
+                <a href="https://www.facebook.com/pintea.danielpv">Pintea Dániel</a>
+                és 
+                <a href="https://www.facebook.com/janos.kosik.9277">Kósik János</a>
+            </p>
         </footer>
-        <a><button type="button" onclick="topFunction()" class="button1"class="w3-button w3-black"><i>Tetejére</i></button></a>
+        <a><button type="button" onclick="topFunction()" class="button1" class="w3-button w3-black"><i>Tetejére</i></button></a>
     </div>
     <script>
         var mybutton = document.getElementById("myBtn");
