--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -36,7 +36,7 @@
 </body>
     <footer class="mellek">
         <divs>
-            <p>Készítette: Pintea Dániel</p>
+            <p>Készítette: <a href="https://www.facebook.com/pintea.danielpv">Pintea Dániel</a></p>
         </div>
     </footer>
 </html>
