--- a/tori.html
+++ b/tori.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <div class="header">
-            Zsigmond és Hunyadi János törökellenes harcai
+            Luxemburgi Zsigmond és Hunyadi János</br>
+            törökellenes harcai
         </div>
         <div class="section">
             <div class="row">
