--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -32,13 +33,24 @@
                         <h1 class="cim1">Trónra kerülése</h1>
                         <p class="szoveg1">
                              - Amikor Nagy Lajos meghalt, vele meghalt a magyar Anjou-ház utolsó férfi sarja, ezért a két lánya, Hedvig és Mária örökölte a trónt. Hedvig a bárók akarata szerint 
-                             Lengyelország uralkodója lett, Mária pedig Magyarország királynője, s ezzel megszűnt a két ország perszonáluniója. Szinte azonnal megindult a verseny Mária kezéért, 
-                             hiszen aki a férje lesz, az lesz Magyarország uralkodója.
+                             Lengyelország uralkodója lett, Mária pedig Magyarország királynője, s ezzel megszűnt a két ország perszonáluniója. Szinte azonnal megindult a verseny Mária kezéért,
+                             hiszen aki a férje lesz, az lesz Magyarország uralkodója. A bárók három pártba tömörültek, és mind a három pártnak megvolt a maga jelöltje. A Lackfiak Mária vőlegényét,
+                             Luxemburgi Zsigmondot (IV. Károly német-római császár fiát, Vencel német és cseh király fivérét) támogatták. A Garaiak, Garai Miklós nádor és Erzsébet anyakirályné
+                             jelöltje Lajos orléans-i herceg (V. Károly francia király gyermeke és VI. (Őrült) Károly fivére) volt; Lajos és Mária diplomáciai úton házasságot is kötött. A délvidéki
+                             Horváti család II. Anjou vagy Kis Károly nápolyi királyt akarta a trónra, és 1385-ben meg is koronázták. 40 napig uralkodott, majd Garai nádor és Erzsébet megölette.
+                             Zsigmond még Kis Károly koronázása előtt Csehországba menekült.A Horváti testvérek összefogtak a királynő és édesanyja ellen, és 1386-ban a nádorral együtt elfogták őket.
+                             A nádort, aki hősiesen küzdött, lekaszabolták, majd lefejezték, az anyakirálynőt és lányát Novigrad várába zárták. A bárók így jobb híján Zsigmond mögé sorakoztak fel,
+                             mivel ő 1385-ben már feleségül vette Máriát. Zsigmondot 1387-ben királlyá koronázták.Zsigmond a trónért egyezséget („ligát”) kötött bizonyos báró csoportokkal, mert a
+                             megcsappant királyi hatalom már nem tette lehetővé, hogy mindenkitől függetlenül politizáljon. Az egyezség értelmében a nádor pedig Lackfi István lett. Zsigmond ugyan
+                             elnyerte a koronát, de kénytelen volt együttműködni a ligával, kielégíteni a bárók területi igényeit. Az Anjou-kor elején helyreállított várbirtok rendszer összeomlott,
+                             mert Zsigmond a királyi birtokok felét eladományozta. Nagy Lajos halálakor a király még az ország háromszáz vára közül 160-nak volt az ura, Zsigmond uralma alatt ez a
+                             szám 70-re csökkent. Ekkor kezdtek kialakulni a hatalmas mágnás vagyonok.
                         </p>
                     </th>
                 </tr>
             </table>
         </div>
+        <a href="Luxemburgi_zsigmond1.html"><button type="button" class="button2" class="w3-button w3-black"><i>Tovább</i></button></a>
         <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
