--- a/Luxemburgi_zsigmond1.html
+++ b/Luxemburgi_zsigmond1.html
@@ -4,41 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Luxemburgi Zsigmond Törökellenes Harcai</title>
+    <title>Luxemburgi Zsigmond</title>
 </head>
 <body>
     <div class="container">
-        <div class="fej3">
-            <p class="mainsz">Luxemburgi Zsigmond</br>Törökellenes Harcai</p>
+        <div class="fej">
+            <p class="mainsz">Luxemburgi Zsigmond</p>
         </div>
         <div>
-            <div>
-                <table>
-                    <tr>
-                        <th><h1 class="cim1">Török harcok</h1>
-                            <p class="szoveg1">
-                                Itt lesznek a plusz dolgok</p>
-                            <h1 class="cim1">PLusz dolgok</h1>
-                            <p class="szoveg1">
-                                Itt lesznek a plusz dolgok
+            <table>
+                <tr>
+                    <th><h1 class="cim1">Élete</h1>
+                        <p class="szoveg1">
+                             - 
                             </p>
-                        </th>
-                    </tr>
-                </table>
-            </div>
+                        <h1 class="cim1">Trónra kerülése</h1>
+                        <p class="szoveg1">
+                             - 
+                        </p>
+                    </th>
+                </tr>
+            </table>
         </div>
-        <a href="luxi_torokharcok1.html"><button type="button" class="button2" class="w3-button w3-black"><i>Tovább</i></button></a>
-        <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
+        <a href="Luxemburgi_zsigmond.html"><button type="button" class="button3" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
     <footer class="mellek">
-        <div>
+        <divs>
             <p>Készítette: <a href="https://www.facebook.com/pintea.danielpv">Pintea Dániel</a></p>
         </div>
     </footer>
