--- a/hunydi_torokharc.html
+++ b/hunydi_torokharc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,7 +22,8 @@
                 <tr>
                     <th><h1 class="cim1">Török harcok</h1>
                         <p class="szoveg1">
-                            Itt lesznek a plusz dolgok</p>
+                            Itt lesznek a plusz dolgok
+                        </p>
                         <h1 class="cim1">PLusz dolgok</h1>
                         <p class="szoveg1">
                             Itt lesznek a plusz dolgok
@@ -30,6 +32,7 @@
                 </tr>
             </table>
         </div>
+        <a href="hunydi_torokharc1.html"><button type="button" class="button2" class="w3-button w3-black"><i>Tovább</i></button></a>
         <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
