--- a/luxi_torokharcok1.html
+++ b/luxi_torokharcok1.html
@@ -33,8 +33,7 @@
                 </table>
             </div>
         </div>
-        <a href="luxi_torokharcok1.html"><button type="button" class="button2" class="w3-button w3-black"><i>Tovább</i></button></a>
-        <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
+        <a href="luxi_harcok.jpg"><button type="button" class="button3" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
     <footer class="mellek">
