--- a/hunydi_torokharc1.html
+++ b/hunydi_torokharc1.html
@@ -20,9 +20,12 @@
         <div>
             <table>
                 <tr>
-                    <th><h1 class="cim1">Török harcok</h1>
+                    <th><h1 class="cim1">Nándorfehérvár Következményei</h1>
                         <p class="szoveg1">
-                            Itt lesznek a plusz dolgok
+                             - A győzelem következtében az Oszmán Birodalom európai terjeszkedése közel hét évtizedre megtorpant. Ez idő alatt az európai hadszervezés átesett válságán, ugyanekkor kiütköztek a török hadszervezet hiányosságai is. Így, mikor a törökök 1521-ben végül elfoglalták Nándorfehérvárt, Európa számára ennek már nem volt olyan súlyos következménye, mintha ez 1456-ban következett volna be.<br>
+                             - Hunyadi a győzelem után nem üldözte a török sereget, de a rá jellemző lendülettel azonnal egy újabb törökellenes hadjárat tervezésébe kezdett. Tévesen úgy ítélte meg a helyzetet, hogy eljött az idő Bizánc felszabadítására és a török Európából való kiszorítására. A hadjárat megindítására nem maradt ideje, pestisjárványban augusztus 11-én elhunyt.<br>
+                             - Thuróczi János szerint: "Amikor Hunyadi János lelkét visszaadta Megváltójának, nagy siralom támadt az egész országban. De nemcsak Magyarországon siratták: az egész kereszténység megrendültén gyászolta legjobb vitézét. (...) Amikor Mahomet császár Hunyadi halálának hírét meghallotta, lehajtotta fejét, és sokáig hallgatott. Ezután azt mondta: 'Ellenségem volt, mégis sajnálom halálát, mert Hunyadinak nem volt párja a fejedelmek között'. (...) Hunyadi János testét Gyulafehérvárra szállították, és ott illő végtisztességgel eltemették. Kapisztránói János így búcsúzott tőle: 'Üdv, mennyei csillag, ország koronája, lehulltál'."[2]<br>
+                             - Október 23-án Kapisztrán János is meghalt a járványban. A siker két ösztönzőjének halála elhamvasztotta a reményeket, az 1456 őszén Magyarországra érkezett keresztes sereg már nem vonult a török ellen. A nándorfehérvári győzelem így kihasználatlan maradt, ennek ellenére minden előzetes várakozást felülmúló haditettnek, a független Magyar Királyság egyik legnagyobb katonai sikerének bizonyult a hódító Oszmán Birodalommal szemben.
                         </p>
                         <h1 class="cim1">PLusz dolgok</h1>
                         <p class="szoveg1">
