--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -40,8 +40,7 @@
                 </tr>
             </table>
         </div>
-        <a href="Hunyadi_János1.html"><button type="button" class="button2" class="w3-button w3-black"><i>Tovább</i></button></a>
-        <a href="tori.html"><button type="button" class="button" class="w3-button w3-black"><i>Vissza</i></button></a>
+        <a href="tori.html"><button type="button" class="button3" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
      <div>
         <div id="myModal" class="modal">
