képek oldalakra kiveve az utso oldal ehh

--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -27,6 +27,10 @@
 -Mivel tehát két évig Milánóban élt a hercegnél, nem vehetett részt 1433. május 31-én Rómában Zsigmondnak német-római császárrá történt koronázásán.</br>
 -1433-tól udvari lovag 1434-ben Bázelbe, majd Csehországba is elkísérte a császárt, és részt vett a huszita háborúkban. Az itt szerzett tapasztalatokat később a török elleni harcaiban is kamatoztatta.</br>
 -Idővel a királyi tanácsban is helyet kapott. 1439-ben szörényi bán, tehát zászlósúr lett.</p>
+                        
+                        <img class="ici" src="hunyti_blas.jpg" alt="Hunyadi János" title="Hunyadi János">
+                        <p class="cim1">Blaschke János rézmetszete (1807)</p>
+
                         <h1 class="cim1">Felemelkedése</h1>
                         <p class="szoveg1">
                             -Katonai pályafutását apródként kezdte, előbb Ozorai Pipó, majd Lazarevics István szerb despota szolgálatában állt, mellettük megismerte a törökök harcmodorát. 1427-től Újlaki László, később Csupor Demeter csapataiban szolgált.</br>
