--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -25,6 +25,9 @@
                              - Luxemburgi Zsigmond, németül: Sigismund von Luxemburg (Prága, 1368. február 14. – Znaim, 1437. december 9.) magyar, német és cseh király, német-római császár, a késő középkori Európa egyik legjelentősebb személyisége, a hercegi birtokáról elnevezett német eredetű Luxemburgi-ház tagja.</br>
                              - Nevéhez fűződik az utolsó összeurópai keresztes hadjárat megszervezése (1396), a nagy nyugati egyházszakadás felszámolása (1417) és a huszitizmus elleni harc megkezdése. Magyarországon 1395-ig első feleségével, Nagy Lajos király leányával, Máriával együtt ült a királyi trónon. Magyar királyként elsősorban Dalmácia elvesztésével, fényes visegrádi, budai és székesfehérvári építkezéseivel, illetve az Oszmán Birodalommal szembeni defenzívába vonulással, a végvárrendszer kiépítésével, valamint törvényeinek előremutató jellegével írta be magát a történelembe. Fiúörökös hiányában királyságaiban utódjául lánya férjét, a tehetséges Habsburg Albertet jelölte meg. Több mint ötven évig viselte a magyar koronát, ezzel a magyar történelem második leghosszabb ideig regnáló uralkodója.
                             </p>
+                        
+                        <img class="ici" src="luxi_thu.jpg" alt="Luxemburgi Zsigmond" title="Luxemburgi Zsigmond">
+                        <p class="cim1">Zsigmondot és címereit ábrázoló lap Thuróczi János krónikájában</p>
                         <h1 class="cim1">Trónra kerülése</h1>
                         <p class="szoveg1">
                              - Amikor Nagy Lajos meghalt, vele meghalt a magyar Anjou-ház utolsó férfisarja, ezért a két lánya, Hedvig és Mária örökölte a trónt. Hedvig a bárók akarata szerint Lengyelország uralkodója lett, Mária pedig Magyarország királynője, s ezzel megszűnt a két ország perszonáluniója. Szinte azonnal megindult a verseny Mária kezéért, hiszen aki a férje lesz, az lesz Magyarország uralkodója.</br>
