--- a/hunydi_torokharc.html
+++ b/hunydi_torokharc.html
@@ -33,6 +33,8 @@
 -1454-ben Krusevácnál Feriz bég seregét verte tönkre, s javaslatot tett egy százezer harcosból álló sereg szervezésére és a török Európából való kiűzésére, de nem nyert támogatókra.</br>
 
                         </p>
+                        <img class="ici" src="hunyti_tor.jpg" alt="Hunyadi János" title="Hunyadi János">
+                        <p class="cim1">A Thuróczi-krónika ábrázolása</p>
                         <h1 class="cim1">Nándorfehérvár</h1>
                         <p class="szoveg1">
                             -1456-ban a török megindult, és ostrom alá vette Nándorfehérvárt. 1456. július 21–22-én Hunyadi János saját seregével – köztük 200 hajóval – és a Kapisztrán János által toborzott parasztokból álló keresztesekkel fényes győzelmet aratott a szultán többszörös túlerőben lévő seregén.</br>
