--- a/luxi_torokharcok.html
+++ b/luxi_torokharcok.html
@@ -54,7 +54,8 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <p class="forszov">
-            Források
+          Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Zsigmond_magyar_kir%C3%A1ly">[Szöveg]</a></br>
+          Innen illesztettük be a képet: <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhu.wikipedia.org%2Fwiki%2FNik%25C3%25A1polyi_csata&psig=AOvVaw1-e5tBi4XJsSvMxbKpGqvL&ust=1641383798180000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKD17amFmPUCFQAAAAAdAAAAABAD">[Kép]</a>
         </p>
     </div>
 
