--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -44,7 +44,8 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <p class="forszov">
-            Források
+            Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Zsigmond_magyar_kir%C3%A1ly">[Szöveg]</a></br>
+            Innen illesztettük be a képet: <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhu.wikipedia.org%2Fwiki%2FZsigmond_magyar_kir%25C3%25A1ly&psig=AOvVaw0Rc2jqIX2PHkJOstD05CsH&ust=1641383568763000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOiuo7yEmPUCFQAAAAAdAAAAABAD">[Kép]</a>
         </p>
     </div>
 
