az én részem kész

--- a/luxi_torokharcok.html
+++ b/luxi_torokharcok.html
@@ -55,7 +55,7 @@
         <span class="close">&times;</span>
         <p class="forszov">
           Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Zsigmond_magyar_kir%C3%A1ly">[Szöveg]</a></br>
-          Innen illesztettük be a képet: <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhu.wikipedia.org%2Fwiki%2FNik%25C3%25A1polyi_csata&psig=AOvVaw1-e5tBi4XJsSvMxbKpGqvL&ust=1641383798180000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKD17amFmPUCFQAAAAAdAAAAABAD">[Kép]</a>
+          Innen illesztettük be a képet: <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Nicopol_final_battle_1398.jpg/1024px-Nicopol_final_battle_1398.jpg">[Kép]</a>
         </p>
     </div>
 
