--- a/Luxemburgi_zsigmond.html
+++ b/Luxemburgi_zsigmond.html
@@ -45,7 +45,7 @@
         <span class="close">&times;</span>
         <p class="forszov">
             Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Zsigmond_magyar_kir%C3%A1ly">[Szöveg]</a></br>
-            Innen illesztettük be a képet: <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhu.wikipedia.org%2Fwiki%2FZsigmond_magyar_kir%25C3%25A1ly&psig=AOvVaw0Rc2jqIX2PHkJOstD05CsH&ust=1641383568763000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOiuo7yEmPUCFQAAAAAdAAAAABAD">[Kép]</a>
+            Innen illesztettük be a képet: <a href="https://upload.wikimedia.org/wikipedia/commons/a/a7/Zsigmond_Thuroczy.jpg">[Kép]</a>
         </p>
     </div>
 
