forrasok/kesz a munka

--- a/Hunyadi_János.html
+++ b/Hunyadi_János.html
@@ -48,7 +48,8 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <p class="forszov">
-           Források
+          Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Hunyadi_J%C3%A1nos">[Szöveg]</a></br>
+          Innen illesztettük be a képet: <a href="https://upload.wikimedia.org/wikipedia/commons/c/c0/Blaschke_Portrait_of_J%C3%A1nos_Hunyadi_1807.jpg">[Kép]</a>
         </p>
     </div>
 
