--- a/hunydi_torokharc.html
+++ b/hunydi_torokharc.html
@@ -56,7 +56,9 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <p class="forszov">
-            Források
+          Innen kerestük ki a szöveget: <a href="https://hu.wikipedia.org/wiki/Hunyadi_J%C3%A1nos">[Szöveg]</a></br>
+          Innen kerestük a Nándorfehérvári csata következményeit: <a href="https://hu.wikipedia.org/wiki/N%C3%A1ndorfeh%C3%A9rv%C3%A1ri_diadal">[Szöveg]</a></br>
+          Innen illesztettük be a képet: <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/John_Hunyadi_%28Chronica_Hungarorum%29.jpg/800px-John_Hunyadi_%28Chronica_Hungarorum%29.jpg">[Kép]</a>
         </p>
     </div>
 
