--- a/luxi_torokharcok1.html
+++ b/luxi_torokharcok1.html
@@ -23,9 +23,8 @@
                     <tr>
                         <th><h1 class="cim1">Halála</h1>
                             <p class="szoveg1">
-                                 - 1437-ben miközben feleségét, Cillei Borbálát akarta kiostromolni a morvaországi Znaim városából, december 8-án a király érezte, hogy közeleg a vég, felvette császári díszruháját, koronáját és az utolsó kenetet, felült a trónjára, halotti misét rendelt magának, és a trónon ülve másnap meg is halt. Holttestét a znaimi Szent Miklós templomban ravatalozták fel. Kívánsága szerint Váradon temették el első felesége mellé. A magyar főurak egy csoportja ezután december 18-án Pozsonyban megválasztotta Albert magyar királyt. Még 1402-ben Zsigmond az Országgyűlés hozzájárulásával a Magyar Királyság trónörökösévé nevezte ki Albert apját, IV. Albert osztrák herceget és távollétében megtette Magyarország kormányzójának, ami ellen tiltakozásként 1403-ban országos felkelés bontakozott ki. Az első Habsburg-házi uralkodót 1438. január 1-jén koronázták meg.[4]
+                                 - 1437-ben miközben feleségét, Cillei Borbálát akarta kiostromolni a morvaországi Znaim városából, december 8-án a király érezte, hogy közeleg a vég, felvette császári díszruháját, koronáját és az utolsó kenetet, felült a trónjára, halotti misét rendelt magának, és a trónon ülve másnap meg is halt. Holttestét a znaimi Szent Miklós templomban ravatalozták fel. Kívánsága szerint Váradon temették el első felesége mellé. A magyar főurak egy csoportja ezután december 18-án Pozsonyban megválasztotta Albert magyar királyt. Még 1402-ben Zsigmond az Országgyűlés hozzájárulásával a Magyar Királyság trónörökösévé nevezte ki Albert apját, IV. Albert osztrák herceget és távollétében megtette Magyarország kormányzójának, ami ellen tiltakozásként 1403-ban országos felkelés bontakozott ki. Az első Habsburg-házi uralkodót 1438. január 1-jén koronázták meg.
                             </p>
-                                
                         </th>
                     </tr>
                 </table>
@@ -34,7 +33,7 @@
         <a href="luxi_torokharcok.html"><button type="button" class="button3" class="w3-button w3-black"><i>Vissza</i></button></a>
      </div>
 </body>
-    <footer class="mellek">
+    <footer class="mellek1">
         <div>
             <p>Készítette: <a href="https://www.facebook.com/pintea.danielpv">Pintea Dániel</a></p>
         </div>
